--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_hardhat_template",
+  "name": "aggregator",
   "version": "1.0.0",
   "description": "",
   "dependencies": {
@@ -11,7 +11,7 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
-    "react-blockies": "^1.4.1", 
+    "react-blockies": "^1.4.1",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
